<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/nome_completo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/botaoCalculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botaoManual"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="28dp"
        android:text="@string/calculo" />

    <Button
        android:id="@+id/botaoManual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botaoConvert"
        android:layout_below="@+id/botaoCalculo"
        android:layout_marginTop="28dp"
        android:text="@string/manual" />

    <Button
        android:id="@+id/botaoConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botaoCreditos"
        android:layout_below="@+id/botaoManual"
        android:layout_marginTop="28dp"
        android:text="@string/convert" />

    <Button
        android:id="@+id/botaoCreditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botaoConvert"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginTop="28dp"
        android:text="@string/credit" />
    <!--  android:layout_centerHorizontal="true" -->
    
		<View
		  android:layout_width="1dp"
		  android:layout_height="30dp">
		</View>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="180dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/botaoCreditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/danger"
        android:background="@drawable/grayrect"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
