<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Resultados" >
    
     <TextView
        android:id="@+id/resTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Resultados"
        android:background="@drawable/redrect"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <ScrollView
        android:id="@+id/scrollView1"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fillViewport="false">
        
           
           <LinearLayout 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingBottom="@dimen/activity_vertical_margin"
			    android:paddingLeft="@dimen/activity_horizontal_margin"
			    android:paddingRight="@dimen/activity_horizontal_margin"
			    android:paddingTop="@dimen/activity_vertical_margin"
			    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewR1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/resNumC"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   
    
    <TextView
        android:id="@+id/resp1"
        android:background="@drawable/grayrect2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    <TextView
        android:id="@+id/textViewR2"
        android:background="@drawable/grayrect2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/resVazResf"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   

    <TextView
        android:id="@+id/textViewR3"
        android:background="@drawable/grayrect2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/resVazEsp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
  
    <TextView
        android:id="@+id/resp3"
        android:background="@drawable/grayrect2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   
    <TextView
        android:id="@+id/textViewR4"
        android:background="@drawable/grayrect2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/resQApuh"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    <TextView
        android:id="@+id/textViewR5"
        android:background="@drawable/grayrect2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/resQEsp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <Button
        android:id="@+id/homeCalc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/homeCalc" />
    
    </LinearLayout>
    </ScrollView>
    
   

    

</LinearLayout>
