<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Calculo1" >
    
      <ScrollView
        android:id="@+id/scrollView1"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fillViewport="false">
        
          <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:text="@string/tipoInf_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:prompt="@string/tipoInf_prompt"
        android:entries="@array/tipoInf_arrays" />

    <TextView
        android:id="@+id/textView2"        
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/spinner1"
        android:text="@string/posTanq_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/textView2"
        android:prompt="@string/posTanq_prompt"
        android:entries="@array/posTanq_arrays"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/spinner2"
        android:text="@string/dTanq_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner2"
        android:layout_below="@+id/textView3"
        android:prompt="@string/dTanq_prompt"
        android:entries="@array/dTanq_arrays"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/spinner3"
        android:text="@string/aTanq_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner3"
        android:layout_below="@+id/textView4"
        android:entries="@array/aTanq_arrays"
        android:prompt="@string/aTanq_prompt" />
    
        <Button
        android:id="@+id/homeCalc"
        android:layout_below="@+id/spinner4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_alignParentLeft="true"
        android:text="@string/homeCalc" />

    <Button
        android:id="@+id/botaoCalcular1"
        android:layout_below="@+id/spinner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/homeCalc"
        android:layout_alignRight="@+id/spinner4"
        android:text="@string/toCalc2" />
     </RelativeLayout>
    </ScrollView>

   

    
   

</RelativeLayout>
